# translator

./: .gitignore  AGENTS.md  CHANGELOG.md  Feature.md  LICENSE  README.md  RELEASE_TEMPLATE.md  RELEASE_v0.0.7.md  RELEASE_v0.2.0.md  TODO.md  WORKFLOW.md  index.html  package.json  pnpm-lock.yaml  selection-popup.html  settings.html  vite.config.ts
.opencode/: opencode-worktree-session-config.json  opencode.json
.opencode/skills/hephaestus/: SKILL.md
.opencode/skills/librarian/: SKILL.md
.opencode/skills/momus/: SKILL.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-dev-startup.txt  task-1-init-structure.txt  task-2-shadcn-components.txt  task-2-tailwind-config.txt  task-3-window-config.txt  task-4-settings-struct.txt  task-5-css-vars.txt
.sisyphus/plans/: translate-app.md
docs/: 划词翻译功能评估.md
docs/superpowers/plans/: 2026-03-29-theme-transparency-fix.md  2026-03-30-cross-window-theme-sync.md
docs/superpowers/specs/: 2026-03-29-theme-transparency-fix-design.md  (+1 more)
src/: App.tsx  index.css  selection-popup.tsx  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  lib.rs  main.rs  selection.rs  settings.rs
src-tauri/src/engines/: baidu.rs  google.rs  llmapi.rs  mod.rs  ollama.rs  siliconflow.rs
src/components/: LatexRenderer.tsx  SelectionPopup.tsx  SettingsModal.tsx  Titlebar.tsx  TranslationView.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useClipboard.ts
src/lib/: latex.ts  theme.ts  utils.ts
src/types/: engine.ts  react-katex.d.ts
